added manifest file

--- a/confirmation.html
+++ b/confirmation.html
@@ -27,31 +27,31 @@
           <li class="menu__link">
             <a href="index.html">
               <span class="link__text">Blog</span>
-              <img class="link__img" src="./img/menu/blog.png" alt="Icône de bog" />
+              <img class="link__img" src="./img/menu/blog.png" alt="Icône de bog">
             </a>
           </li>
           <li class="menu__link">
             <a href="index.html">
               <span class="link__text">Galerie</span>
-              <img class="link__img" src="./img/menu/gallery.png" alt="Icône gallerie photo" />
+              <img class="link__img" src="./img/menu/gallery.png" alt="Icône gallerie photo">
             </a>
           </li>
           <li class="menu__link">
             <a href="index.html">
               <span class="link__text">Statistiques</span>
-              <img class="link__img" src="./img/menu/stats.png" alt="Icône statistique" />
+              <img class="link__img" src="./img/menu/stats.png" alt="Icône statistique">
             </a>
           </li>
           <li class="menu__link">
             <a href="index.html">
               <span class="link__text">Films</span>
-              <img class="link__img" src="./img/menu/movie-icon-2.png" alt="Icône film" />
+              <img class="link__img" src="./img/menu/movie-icon-2.png" alt="Icône film">
             </a>
           </li>
           <li class="menu__link">
             <a href="index.html">
               <span class="link__text">Contactez-nous</span>
-              <img class="link__img" src="./img/menu/contact-us.png" alt="Icône contactez-nous" />
+              <img class="link__img" src="./img/menu/contact-us.png" alt="Icône contactez-nous">
             </a>
           </li>
         </ul>
@@ -65,7 +65,7 @@
   <section class="confirmation">
     <div class="container confirmation__container">
       <div>
-        <p class="confirmation__text">Message bien reçu</p>
+        <h2 class="confirmation__text">Message bien reçu</h2>
         <p class="confirmation__text">Merci</p>
 
       </div>
@@ -145,11 +145,15 @@
 
         <img src="img/icons/telephone-25.png" alt="Icône téléphone" class="last-line__contact--phone">
 
-        <address href="tel:+15141234567" class="last-line__contact--phone">514-123-4567</address>
+        <address class="last-line__contact--phone">
+          <a href="tel:+15141234567" aria-label="Rjoindre ce téléphone">514-123-4567</a>
+        </address>
 
         <img src="img/icons/mail-25.png" alt="Icône courriel">
 
-        <address href="mailto:cegep@troisriviere.ca">cegep@troisrivieres.ca</address>
+        <address>
+          <a href="mailto:cegep@troisriviere.ca" aria-label="Envoyer un courriel">cegep@troisrivieres.ca</a>
+        </address>
 
 
       </div>
