Ajouter bouton pour installer

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     }
   </script>
   <script src="./script/script.js" defer></script>
+  <script src="./script/install.js"></script>
 </head>
 
 <body>
@@ -362,6 +363,9 @@
       </form>
 
 
+    </section>
+    <section>
+      <button class="nav-link px-lg-4 px-2" id="butInstall" aria-label="Install" hidden>Installer la PWA</button>
     </section>
 
   </main>
