--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Site de Shrek" content="Bienvenue aux amateurs de Shrek">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <title>Shrek</title>
   <link rel="stylesheet" href="./style/css/normalize.css">
   <link rel="stylesheet" href="./style/css/style.css">
@@ -364,6 +365,7 @@
 
 
     </section>
+
     <section>
       <button class="nav-link px-lg-4 px-2" id="butInstall" aria-label="Install" hidden>Installer la PWA</button>
     </section>
