--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Site de Shrek" content="Bienvenue aux amateurs de Shrek">
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+  <meta name="theme-color">
   <title>Shrek</title>
   <link rel="stylesheet" href="./style/css/normalize.css">
   <link rel="stylesheet" href="./style/css/style.css">
